Improve Veil light occlusion